# worm

./: .gitignore  README.md  build_non_uniform.sh  pyproject.toml  setup.py
src/: lattice.hpp  model.hpp  worm.Element.hpp  worm.cpp  worm.hpp  worm.output.cpp  worm.run.cpp  worm.run_mpi.cpp  worm.update.cpp
src_xml/: CMakeLists.txt  model.hpp  worm.Element.hpp  worm.cpp  worm.hpp  worm.output.cpp  worm.run.cpp  worm.run_mpi.cpp  worm.update.cpp
tutorials/BoseHubbard/: tutorial_BoseHubbard.tex
tutorials/BoseHubbard/solution/: BoseHubbard_Mott.ini  BoseHubbard_SF.ini  BoseHubbard_normal.ini
tutorials/Spin/: tutorial_spin.tex
tutorials/Spin/solution/: spin_half.ini  spin_one.ini
worm/helpers/: io.py  mu.py  sim.py  test.ipynb
worm/notebooks/: noise.ipynb  parameters.ipynb  test.ipynb
