[tool.poetry]
name = "worm"
version = "0.1.0"
description = ""
authors = ["fabian <dechent.fabian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
ipykernel = "^6.22.0"
h5py = "^3.8.0"
tqdm = "^4.65.0"
fyeldgenerator = "^0.1.7"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
